committing again after deleting sub repo

--- a/notebooks/song_NLP.ipynb
+++ b/notebooks/song_NLP.ipynb
@@ -3854,16 +3854,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2888"
+       "3006"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3910,7 +3910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3994,32 +3994,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['May God bless and keep you always May your wishes all come true May you always do for others And let others do for you May you build a ladder to the stars And climb on every rung May you stay forever young Forever young forever young May you stay forever young May you grow up to be righteous May you grow up to be true May you always know the truth And see the light surrounding you May you always be courageous Stand upright and be strong May you stay forever young Forever young forever young May you stay forever young May your hands always be busy May your feet always be swift May you have a strong foundation When the winds are changing shift May your heart always be joyful And may your song always be sung May you stay forever young Forever young forever young May you stay forever young'],\n",
-       " ['I annotated a chord for each measure it is used May God bless and keep you always May your wishes all come true May you always do for others And let others do for you May you build a ladder to the stars And climb on every rung And may you stay forever young Forever young Forever young May you stay forever young'],\n",
-       " ['May God bless and keep you always May your wishes all come true May you always do for others And let others do for you May you build a ladder to the stars And climb on every rung May you stay forever young Forever young forever young May you stay forever young May you grow up to be righteous May you grow up to be true May you always know the truth And see the lights surrounding you May you always be courageous Stand upright and be strong May you stay forever young Forever young forever young May you stay forever young May your hands always be busy May your feet always be swift May you have a strong foundation When the winds of changes shift May your heart always be joyful May your song always be sung May you stay forever young Forever young forever young May you stay forever young'],\n",
-       " ['May God bless and keep you always May your wishes all come true May you always do for others And let others do for you May you build a ladder to the stars And climb on every rung May you stay forever young May you stay forever young May you grow up to be righteous May you grow up to be true May you always know the truth And see the lies surrounding you May you always be courageous Stand upright and be strong May you stay forever young May you stay forever young May your hands always be busy May your feet always be swift May you have a strong foundation When the winds of changes shift May your heart always be joyful And may your song always be sung May you stay forever young'],\n",
-       " [\"May God bless and keep you always may your wishes all come true May you always do for others May you build a ladder to the stars and climb on ev'ry rung And may you stay forever young Forever yo ung forever young May you stay forever young May you grow up to be righteous may you grow up to be true May you always know the truth May you always be courageous stand upright and be strong And may you stay forever young Forever yo ung forever young May you stay forever young May your hands always be busy may your feet always be swift May you have a strong foundation May your heart always be joyful may your song always be sung And may you stay forever young Forever yo ung forever young May you stay forever young\"],\n",
-       " ['1 2 3 4 1 2 3 4 1 2 3 4 1 2 3 4 1 2 3 4 1 2 3 4 May God bless and keep you always May your wishes all come true May you always do for others And let others do for you May you build a ladder to the stars And climb on every rung And may you stay forever young May you stay forever young May you grow up to be righteous May you grow up to be true May you always know the truth And see the lights surrounding you May you always be courageous Stand upright and be strong And may you stay forever young May you stay forever young May your hands always be busy May your feet always be swift May you have a strong foundation When the winds of changes shift May your heart always be joyful May your song always be sung May you stay forever young May you stay forever young'],\n",
-       " [\"Four strong winds that blow lonely Seven seas that run high All those things that don't change come what may But the good times are all gone And I'm bound for moving on I'll look for you if you ever come this way I think I'll go out to Alberta Weather's good there in the fall I've got some friends that I can go working for Still I wish you'd change your mind If I ask you one more time But we've been through that a hundred times or more Four strong winds that blow lonely Seven seas that run high All those things that don't change come what may But the good times are all gone And I'm bound for moving on I'll look for you if if you ever come this way If I get there before the snow flies And if things are looking good You could meet me if I sent you down the fare But by then it would be springtime Not too much for you to do And I'll see you if I pass this way again Four strong winds that blow lonely Seven seas that run high All those things that don't change come what may But the good times are all gone And I'm bound for moving on\"],\n",
-       " [\"When she said Don't waste your words they're just lies I cried she was deaf And she worked on my face until breaking my eyes Then said What else you got left It was then that I got up to leave But she said Don't forget Ev'rybody must give something back For something they get I stood there and hummed I tapped on her drum and asked her how come And she buttoned her boot And straightened her suit Then she said Don't get cute So I forced my hands in my pockets And felt with my thumbs And gallantly handed her My very last peice of gum She threw me outside I stood in the dirt where ev'ry one walked And after finding I'd Forgotten my shirt I went back and knocked I waited in the hallway she went to get it And I tried to make sense Out of that picture of you in your wheelchair That leaned up against Her Jamaican rum And when she did come I asked her for some She said No dear I said Your words aren't clear You'd better spit out your gum She screamed till her face got so red Then she fell on the floor And I covered her up and then Thought I'd go look through her drawer And when I was through I filled up my shoe And brought it to you And you you took me in You loved me then You didn't waste time And I I never took much I never asked for your crutch Now don't ask for mine\"],\n",
-       " [\"Frankie was a good girl Payed 100 dollers for Albert's new suite of clothes Albert said I'm leaving you Won't be gone for long Don't wait for me A worry about me when I'm gone He was her man but he done her wrong Frankie went down to the corner saloon Get a bucket of beer Said to the bartender Has my lovin' man been here He was her man but he done her wrong Well I ain't gonna tell you no stories I ain't gonna tell you no lies I saw Albert an hour ago He was her man but he done her wrong Frankie went down to 12th Street Lookin' up through the window high She saw her Albert there Lovein' up Alice Bly He was her man but he done her wrong Frankie pulled out a pistol Pulled out a forty four Gun went off a rootie toot toot And Albert fell on the floor He was her man but he done her wrong Frankie got down upon her knees Took Albert into her lap Started to hug and kiss him But there was no bringin' him back He was her man but he done her wrong Gimme a thousand policemen Throw me into a cell I shot my Albert dead And now I'm goin' to hell He was her man but he done me wrong Judge said to the jury Plain as a thing can be A woman shot her lover down Murder in the second degree He was her man but he done her wrong Frankie went to the scaffold Calm as a girl could be Turned her eyes up towards the heavens Said Nearer my God to Thee He was her man but he done her wrong\"],\n",
-       " [\"Freedom for the stallion Freedom for the mare and the colt Freedom for the baby child Who's not grown old enough to vote what You gonna do About the people that are prayin' to You They got men makin' laws that destroy other men made money God it's a dog gone sin Oh Lord You got to help us find a way Big ships sailin' Slaves all chained and bound Heading for another land that some cat says he's up and found What You gonna do About the people who been prayin' to You They got men makin' laws that destroy other men makin' money God it's a dog gone sin Oh Lord You got to help us find a way Freedom for the stallion Freedom for the mare and the colt Freedom for the baby child Who's not grown old enough to vote What You gonna do About the people that are prayin' to You Well when I look Into my mind It's the truth that I find Oh Lord You gotta help us find a way Freedom for the stallion Freedom for the mare and the colt Freedom for the baby child Who has not grown old enough to vote What You gonna do About the people that are prayin' to You Well when I look Into my mind It's the truth that I find Oh Lord You gotta help us find a way\"],\n",
-       " [\"I was born in Dixie in a boomer shack Just a little shanty by the railroad track Freight train was it taught me how to cry hummin' of the driver was my lullaby Oh Lord mama I got them in the bottom of my rambling shoes And when the whistle blows I gotta go baby don't you know Well it looks like I'm never gonna lose the freight train blues\"]]"
+       "[\"I was born in Dixie in a boomer shack Just a little shanty by the railroad track Freight train was it taught me how to cry hummin' of the driver was my lullaby Oh Lord mama I got them in the bottom of my rambling shoes And when the whistle blows I gotta go baby don't you know Well it looks like I'm never gonna lose the freight train blues\"]"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lyrics_list"
+    "lyrics_list[10]"
    ]
   },
   {
