debugged tfidf code

--- a/notebooks/clean_parse.ipynb
+++ b/notebooks/clean_parse.ipynb
@@ -182,6 +182,599 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([(0, 'Em'),\n",
+       "  (9, 'Em'),\n",
+       "  (17, 'Am7'),\n",
+       "  (23, 'Em'),\n",
+       "  (30, 'Em'),\n",
+       "  (33, 'Em'),\n",
+       "  (35, 'Am7'),\n",
+       "  (40, 'Em'),\n",
+       "  (44, 'Bsus4'),\n",
+       "  (46, 'Dsus2'),\n",
+       "  (52, 'Em'),\n",
+       "  (65, 'Em'),\n",
+       "  (75, 'Am7'),\n",
+       "  (85, 'Em'),\n",
+       "  (91, 'Em'),\n",
+       "  (95, 'Em'),\n",
+       "  (98, 'Am7'),\n",
+       "  (103, 'Em'),\n",
+       "  (108, 'Bsus4'),\n",
+       "  (111, 'Dsus2'),\n",
+       "  (117, 'Em'),\n",
+       "  (123, 'Em'),\n",
+       "  (133, 'Am7'),\n",
+       "  (140, 'Em'),\n",
+       "  (146, 'Em'),\n",
+       "  (149, 'Em'),\n",
+       "  (152, 'Am7'),\n",
+       "  (156, 'Em'),\n",
+       "  (157, 'Em7'),\n",
+       "  (159, 'Bsus4'),\n",
+       "  (162, 'Dsus2'),\n",
+       "  (168, 'Em'),\n",
+       "  (175, 'Em'),\n",
+       "  (185, 'Am7'),\n",
+       "  (193, 'Em'),\n",
+       "  (201, 'Em'),\n",
+       "  (205, 'Em'),\n",
+       "  (207, 'Am7'),\n",
+       "  (213, 'Em'),\n",
+       "  (216, 'Bsus4'),\n",
+       "  (219, 'Dsus2'),\n",
+       "  (226, 'Em'),\n",
+       "  (233, 'Em'),\n",
+       "  (241, 'Am7'),\n",
+       "  (248, 'Em'),\n",
+       "  (257, 'Em'),\n",
+       "  (260, 'Em'),\n",
+       "  (262, 'Am7'),\n",
+       "  (267, 'Em'),\n",
+       "  (272, 'Bsus4'),\n",
+       "  (277, 'Dsus2'),\n",
+       "  (281, 'Em'),\n",
+       "  (288, 'Em'),\n",
+       "  (295, 'Am7'),\n",
+       "  (303, 'Em'),\n",
+       "  (311, 'Em'),\n",
+       "  (315, 'Em'),\n",
+       "  (323, 'Em'),\n",
+       "  (326, 'Bsus4'),\n",
+       "  (329, 'Dsus2'),\n",
+       "  (334, 'Em'),\n",
+       "  (343, 'Em'),\n",
+       "  (351, 'Am7'),\n",
+       "  (361, 'Em'),\n",
+       "  (367, 'Em'),\n",
+       "  (370, 'Em'),\n",
+       "  (371, 'Am7'),\n",
+       "  (375, 'Em'),\n",
+       "  (378, 'Bsus4'),\n",
+       "  (380, 'Dsus2'),\n",
+       "  (385, 'Em'),\n",
+       "  (389, 'Em'),\n",
+       "  (397, 'Am7'),\n",
+       "  (403, 'Em'),\n",
+       "  (408, 'Em'),\n",
+       "  (411, 'Em'),\n",
+       "  (413, 'Am7'),\n",
+       "  (418, 'Em'),\n",
+       "  (421, 'Bsus4'),\n",
+       "  (423, 'Dsus2'),\n",
+       "  (427, 'Em'),\n",
+       "  (436, 'Em'),\n",
+       "  (442, 'Am7'),\n",
+       "  (449, 'Em'),\n",
+       "  (457, 'Em'),\n",
+       "  (460, 'Em'),\n",
+       "  (463, 'Am7'),\n",
+       "  (467, 'Em'),\n",
+       "  (472, 'Bsus4'),\n",
+       "  (473, 'Dsus2'),\n",
+       "  (477, 'Em'),\n",
+       "  (477, 'Am7'),\n",
+       "  (477, 'Em'),\n",
+       "  (477, 'Am7'),\n",
+       "  (477, 'Em')],\n",
+       " ['As',\n",
+       "  'walked',\n",
+       "  'out',\n",
+       "  'tonight',\n",
+       "  'in',\n",
+       "  'the',\n",
+       "  'mystic',\n",
+       "  'garden',\n",
+       "  'The',\n",
+       "  'wounded',\n",
+       "  'flowers',\n",
+       "  'were',\n",
+       "  'dangling',\n",
+       "  'from',\n",
+       "  'the',\n",
+       "  'vines',\n",
+       "  'was',\n",
+       "  'passing',\n",
+       "  'by',\n",
+       "  'yon',\n",
+       "  'cool',\n",
+       "  'and',\n",
+       "  'crystal',\n",
+       "  'fountain',\n",
+       "  'Someone',\n",
+       "  'hit',\n",
+       "  'me',\n",
+       "  'from',\n",
+       "  'behind',\n",
+       "  \"Ain't\",\n",
+       "  \"talkin'\",\n",
+       "  'just',\n",
+       "  \"walkin'\",\n",
+       "  'Through',\n",
+       "  'this',\n",
+       "  'weary',\n",
+       "  'world',\n",
+       "  'of',\n",
+       "  'woe',\n",
+       "  'Heart',\n",
+       "  \"burnin'\",\n",
+       "  'still',\n",
+       "  \"yearnin'\",\n",
+       "  'No',\n",
+       "  'one',\n",
+       "  'on',\n",
+       "  'earth',\n",
+       "  'would',\n",
+       "  'ever',\n",
+       "  'know',\n",
+       "  'They',\n",
+       "  'say',\n",
+       "  'prayer',\n",
+       "  'has',\n",
+       "  'the',\n",
+       "  'power',\n",
+       "  'to',\n",
+       "  'help',\n",
+       "  'So',\n",
+       "  'pray',\n",
+       "  'from',\n",
+       "  'the',\n",
+       "  'mother',\n",
+       "  'In',\n",
+       "  'the',\n",
+       "  'human',\n",
+       "  'heart',\n",
+       "  'an',\n",
+       "  'evil',\n",
+       "  'spirit',\n",
+       "  'can',\n",
+       "  'dwell',\n",
+       "  \"I'm\",\n",
+       "  'trying',\n",
+       "  'to',\n",
+       "  'love',\n",
+       "  'my',\n",
+       "  'neighbor',\n",
+       "  'and',\n",
+       "  'do',\n",
+       "  'good',\n",
+       "  'unto',\n",
+       "  'others',\n",
+       "  'But',\n",
+       "  'oh',\n",
+       "  'mother',\n",
+       "  'things',\n",
+       "  \"ain't\",\n",
+       "  'going',\n",
+       "  'well',\n",
+       "  \"Ain't\",\n",
+       "  \"talkin'\",\n",
+       "  'just',\n",
+       "  \"walkin'\",\n",
+       "  \"I'll\",\n",
+       "  'burn',\n",
+       "  'that',\n",
+       "  'bridge',\n",
+       "  'before',\n",
+       "  'you',\n",
+       "  'get',\n",
+       "  'across',\n",
+       "  'Heart',\n",
+       "  \"burnin'\",\n",
+       "  'still',\n",
+       "  \"yearnin'\",\n",
+       "  \"There'll\",\n",
+       "  'be',\n",
+       "  'no',\n",
+       "  'mercy',\n",
+       "  'for',\n",
+       "  'you',\n",
+       "  'once',\n",
+       "  \"you've\",\n",
+       "  'lost',\n",
+       "  'Now',\n",
+       "  \"I'm\",\n",
+       "  'all',\n",
+       "  'worn',\n",
+       "  'out',\n",
+       "  'by',\n",
+       "  \"weepin'\",\n",
+       "  'My',\n",
+       "  'eyes',\n",
+       "  'are',\n",
+       "  'full',\n",
+       "  'of',\n",
+       "  'tears',\n",
+       "  'my',\n",
+       "  'lips',\n",
+       "  'are',\n",
+       "  'dry',\n",
+       "  'If',\n",
+       "  'catch',\n",
+       "  'my',\n",
+       "  'opponents',\n",
+       "  'ever',\n",
+       "  \"sleepin'\",\n",
+       "  \"I'll\",\n",
+       "  'just',\n",
+       "  'slaughter',\n",
+       "  'them',\n",
+       "  'where',\n",
+       "  'they',\n",
+       "  'lie',\n",
+       "  \"Ain't\",\n",
+       "  \"talkin'\",\n",
+       "  'just',\n",
+       "  \"walkin'\",\n",
+       "  'Through',\n",
+       "  'the',\n",
+       "  'world',\n",
+       "  'mysterious',\n",
+       "  'and',\n",
+       "  'vague',\n",
+       "  'Heart',\n",
+       "  \"burnin'\",\n",
+       "  'still',\n",
+       "  \"yearnin'\",\n",
+       "  'Walking',\n",
+       "  'through',\n",
+       "  'the',\n",
+       "  'cities',\n",
+       "  'of',\n",
+       "  'the',\n",
+       "  'plague',\n",
+       "  'Well',\n",
+       "  'the',\n",
+       "  'whole',\n",
+       "  'world',\n",
+       "  'is',\n",
+       "  'filled',\n",
+       "  'with',\n",
+       "  'speculation',\n",
+       "  'The',\n",
+       "  'whole',\n",
+       "  'wide',\n",
+       "  'world',\n",
+       "  'which',\n",
+       "  'people',\n",
+       "  'say',\n",
+       "  'is',\n",
+       "  'round',\n",
+       "  'They',\n",
+       "  'will',\n",
+       "  'tear',\n",
+       "  'your',\n",
+       "  'mind',\n",
+       "  'away',\n",
+       "  'from',\n",
+       "  'contemplation',\n",
+       "  'They',\n",
+       "  'will',\n",
+       "  'jump',\n",
+       "  'on',\n",
+       "  'your',\n",
+       "  'misfortune',\n",
+       "  'when',\n",
+       "  \"you're\",\n",
+       "  'down',\n",
+       "  \"Ain't\",\n",
+       "  \"talkin'\",\n",
+       "  'just',\n",
+       "  \"walkin'\",\n",
+       "  \"Eatin'\",\n",
+       "  'hog',\n",
+       "  'eyed',\n",
+       "  'grease',\n",
+       "  'in',\n",
+       "  'hog',\n",
+       "  'eyed',\n",
+       "  'town',\n",
+       "  'Heart',\n",
+       "  \"burnin'\",\n",
+       "  'still',\n",
+       "  \"yearnin'\",\n",
+       "  'Someday',\n",
+       "  \"you'll\",\n",
+       "  'be',\n",
+       "  'glad',\n",
+       "  'to',\n",
+       "  'have',\n",
+       "  'me',\n",
+       "  'around',\n",
+       "  'They',\n",
+       "  'will',\n",
+       "  'crush',\n",
+       "  'you',\n",
+       "  'with',\n",
+       "  'wealth',\n",
+       "  'and',\n",
+       "  'power',\n",
+       "  'Every',\n",
+       "  'waking',\n",
+       "  'moment',\n",
+       "  'you',\n",
+       "  'could',\n",
+       "  'crack',\n",
+       "  \"I'll\",\n",
+       "  'make',\n",
+       "  'the',\n",
+       "  'most',\n",
+       "  'of',\n",
+       "  'one',\n",
+       "  'last',\n",
+       "  'extra',\n",
+       "  'hour',\n",
+       "  \"I'll\",\n",
+       "  'avenge',\n",
+       "  'my',\n",
+       "  \"father's\",\n",
+       "  'death',\n",
+       "  'then',\n",
+       "  \"I'll\",\n",
+       "  'step',\n",
+       "  'back',\n",
+       "  \"Ain't\",\n",
+       "  \"talkin'\",\n",
+       "  'just',\n",
+       "  \"walkin'\",\n",
+       "  'Hand',\n",
+       "  'me',\n",
+       "  'down',\n",
+       "  'my',\n",
+       "  \"walkin'\",\n",
+       "  'cane',\n",
+       "  'Heart',\n",
+       "  \"burnin'\",\n",
+       "  'still',\n",
+       "  \"yearnin'\",\n",
+       "  'Got',\n",
+       "  'to',\n",
+       "  'get',\n",
+       "  'you',\n",
+       "  'out',\n",
+       "  'of',\n",
+       "  'my',\n",
+       "  'miserable',\n",
+       "  'brain',\n",
+       "  'All',\n",
+       "  'my',\n",
+       "  'loyal',\n",
+       "  'and',\n",
+       "  'my',\n",
+       "  'much',\n",
+       "  'loved',\n",
+       "  'companions',\n",
+       "  'They',\n",
+       "  'approve',\n",
+       "  'of',\n",
+       "  'me',\n",
+       "  'and',\n",
+       "  'share',\n",
+       "  'my',\n",
+       "  'code',\n",
+       "  'practice',\n",
+       "  'faith',\n",
+       "  \"that's\",\n",
+       "  'been',\n",
+       "  'long',\n",
+       "  'abandoned',\n",
+       "  \"Ain't\",\n",
+       "  'no',\n",
+       "  'altars',\n",
+       "  'on',\n",
+       "  'this',\n",
+       "  'long',\n",
+       "  'and',\n",
+       "  'lonesome',\n",
+       "  'road',\n",
+       "  \"Ain't\",\n",
+       "  \"talkin'\",\n",
+       "  'just',\n",
+       "  \"walkin'\",\n",
+       "  'My',\n",
+       "  'mule',\n",
+       "  'is',\n",
+       "  'sick',\n",
+       "  'my',\n",
+       "  'horse',\n",
+       "  'is',\n",
+       "  'blind',\n",
+       "  'Heart',\n",
+       "  \"burnin'\",\n",
+       "  'still',\n",
+       "  \"yearnin'\",\n",
+       "  \"Thinkin'\",\n",
+       "  'bout',\n",
+       "  'that',\n",
+       "  'gal',\n",
+       "  'left',\n",
+       "  'behind',\n",
+       "  'Well',\n",
+       "  \"it's\",\n",
+       "  'bright',\n",
+       "  'in',\n",
+       "  'the',\n",
+       "  'heavens',\n",
+       "  'and',\n",
+       "  'the',\n",
+       "  'wheels',\n",
+       "  'are',\n",
+       "  \"flyin'\",\n",
+       "  'Fame',\n",
+       "  'and',\n",
+       "  'honor',\n",
+       "  'never',\n",
+       "  'seem',\n",
+       "  'to',\n",
+       "  'fade',\n",
+       "  'The',\n",
+       "  'fire',\n",
+       "  'gone',\n",
+       "  'out',\n",
+       "  'but',\n",
+       "  'the',\n",
+       "  'light',\n",
+       "  'is',\n",
+       "  'never',\n",
+       "  \"dyin'\",\n",
+       "  'Who',\n",
+       "  'says',\n",
+       "  \"can't\",\n",
+       "  'get',\n",
+       "  'heavenly',\n",
+       "  'aid',\n",
+       "  \"Ain't\",\n",
+       "  \"talkin'\",\n",
+       "  'just',\n",
+       "  \"walkin'\",\n",
+       "  \"Carryin'\",\n",
+       "  'dead',\n",
+       "  \"man's\",\n",
+       "  'shield',\n",
+       "  'Heart',\n",
+       "  \"burnin'\",\n",
+       "  'still',\n",
+       "  \"yearnin'\",\n",
+       "  \"Walkin'\",\n",
+       "  'with',\n",
+       "  'toothache',\n",
+       "  'in',\n",
+       "  'my',\n",
+       "  'heel',\n",
+       "  'The',\n",
+       "  \"sufferin'\",\n",
+       "  'is',\n",
+       "  'unending',\n",
+       "  'Every',\n",
+       "  'nook',\n",
+       "  'and',\n",
+       "  'cranny',\n",
+       "  'has',\n",
+       "  'its',\n",
+       "  'tears',\n",
+       "  \"I'm\",\n",
+       "  'not',\n",
+       "  'playing',\n",
+       "  \"I'm\",\n",
+       "  'not',\n",
+       "  'pretending',\n",
+       "  \"I'm\",\n",
+       "  'not',\n",
+       "  \"nursin'\",\n",
+       "  'any',\n",
+       "  'superfluous',\n",
+       "  'fears',\n",
+       "  \"Ain't\",\n",
+       "  \"talkin'\",\n",
+       "  'just',\n",
+       "  \"walkin'\",\n",
+       "  \"Walkin'\",\n",
+       "  'ever',\n",
+       "  'since',\n",
+       "  'the',\n",
+       "  'other',\n",
+       "  'night',\n",
+       "  'Heart',\n",
+       "  \"burnin'\",\n",
+       "  'still',\n",
+       "  \"yearnin'\",\n",
+       "  \"Walkin'\",\n",
+       "  'til',\n",
+       "  \"I'm\",\n",
+       "  'clean',\n",
+       "  'out',\n",
+       "  'of',\n",
+       "  'sight',\n",
+       "  'As',\n",
+       "  'walked',\n",
+       "  'out',\n",
+       "  'in',\n",
+       "  'the',\n",
+       "  'mystic',\n",
+       "  'garden',\n",
+       "  'On',\n",
+       "  'hot',\n",
+       "  'summer',\n",
+       "  'day',\n",
+       "  'hot',\n",
+       "  'summer',\n",
+       "  'lawn',\n",
+       "  'Excuse',\n",
+       "  'me',\n",
+       "  \"ma'am\",\n",
+       "  'beg',\n",
+       "  'your',\n",
+       "  'pardon',\n",
+       "  \"There's\",\n",
+       "  'no',\n",
+       "  'one',\n",
+       "  'here',\n",
+       "  'the',\n",
+       "  'gardener',\n",
+       "  'is',\n",
+       "  'gone',\n",
+       "  \"Ain't\",\n",
+       "  \"talkin'\",\n",
+       "  'just',\n",
+       "  \"walkin'\",\n",
+       "  'Up',\n",
+       "  'the',\n",
+       "  'road',\n",
+       "  'around',\n",
+       "  'the',\n",
+       "  'bend',\n",
+       "  'Heart',\n",
+       "  \"burnin'\",\n",
+       "  'still',\n",
+       "  \"yearnin'\",\n",
+       "  'In',\n",
+       "  'the',\n",
+       "  'last',\n",
+       "  'outback',\n",
+       "  'at',\n",
+       "  'the',\n",
+       "  \"world's\",\n",
+       "  'end',\n",
+       "  'freely'])"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parse_song(html_docs[129])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 116,
    "metadata": {},
    "outputs": [
